Добавлены фото стройки за декабрь

--- a/src/pug/parts/object_02/progress_02.pug
+++ b/src/pug/parts/object_02/progress_02.pug
@@ -8,6 +8,30 @@
     .section__content
       .carousel
         .carousel__item
+          a(href="/img/progress/02/027.jpg" rel="progress").carousel__link.fancybox
+            img(src="/img/progress/02/027_s.jpg").carousel__img.carousel__img--full
+            span.carousel__title декабрь 2021 г.
+        .carousel__item
+          a(href="/img/progress/02/026.jpg" rel="progress").carousel__link.fancybox
+            img(src="/img/progress/02/026_s.jpg").carousel__img.carousel__img--full
+            span.carousel__title декабрь 2021 г.
+        .carousel__item
+          a(href="/img/progress/02/025.jpg" rel="progress").carousel__link.fancybox
+            img(src="/img/progress/02/025_s.jpg").carousel__img.carousel__img--full
+            span.carousel__title декабрь 2021 г.
+        .carousel__item
+          a(href="/img/progress/02/024.jpg" rel="progress").carousel__link.fancybox
+            img(src="/img/progress/02/024_s.jpg").carousel__img.carousel__img--full
+            span.carousel__title декабрь 2021 г.
+        .carousel__item
+          a(href="/img/progress/02/023.jpg" rel="progress").carousel__link.fancybox
+            img(src="/img/progress/02/023_s.jpg").carousel__img.carousel__img--full
+            span.carousel__title декабрь 2021 г.
+        .carousel__item
+          a(href="/img/progress/02/022.jpg" rel="progress").carousel__link.fancybox
+            img(src="/img/progress/02/022_s.jpg").carousel__img.carousel__img--full
+            span.carousel__title декабрь 2021 г.
+        .carousel__item
           a(href="/img/progress/02/021.jpg" rel="progress").carousel__link.fancybox
             img(src="/img/progress/02/021_s.jpg").carousel__img.carousel__img--full
             span.carousel__title ноябрь 2021 г.
